# konan-sdk

./: .flake8  .gitignore  .readthedocs.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPALTE/: bug_report.md
.github/ISSUE_TEMPALTE/workflows/: ci.yml
.github/workflows/: quality.yml  release.yml
docs/: requirements.txt
docs/source/: conf.py  index.rst  usage.rst
docs/source/api-integration/: index.rst  konan-metrics.rst  konan-sdk.rst  konan-types.rst
docs/source/model-creation/: index.rst  models.rst  serializers.rst  services.rst
konan_sdk/: auth.py  endpoints.py  konan_metrics.py  konan_types.py  konan_user.py  sdk.py
konan_sdk/endpoints/: auth.py  base_endpoint.py  deployments.py  interfaces.py  konan_endpoints.py  mixins.py  models.py  predictions.py  utils.py
konan_sdk/konan_service/: constants.py  models.py  routers.py  serializers.py  services.py
konan_sdk/konan_types/: konan_feedback.py  konan_metrics.py
konan_sdk/konan_utils/: enums.py  models.py
tests/endpoints/: test_create_deployment_endpoint.py  test_delete_endpoint.py  test_endpoint.py  test_evaluate_endpoint.py  test_feedback_endpoint.py  test_interfaces.py  test_login_endpoint.py  test_prediction_endpoint.py  test_refresh_endpoint.py
tests/endpoints/refs/: placeholders.yaml
tests/endpoints/refs/endpoints/: CreateDeploymentEndpoint.yaml  DeleteDeployment.yaml  EvaluateEndpoint.yaml  FeedbackEndpoint.yaml  LoginEndpoint.yaml  PredictionEndpoint.yaml  RefreshTokenEndpoint.yaml
