[tool.poetry]
name = "konan-sdk"
version = "1.0.0"
description = "Python SDK for Konan's API"
authors = ["Synapse Analytics"]
license = "MIT"
readme = "README.md"
documentation = "https://docs.konan.ai"
repository = "https://github.com/SynapseAnalytics/konan-sdk"

[tool.poetry.urls]
"Konan Website" = "https://konan.ai"

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.26.0"
PyJWT = { extras = ["crypto"], version = "^2.1.0" }
loguru = "^0.5.3"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
pep8-naming = "^0.12.1"
pytest = "^6.2.4"
python-semantic-release = "^7.19.2"

[tool.semantic_release]
version_variable = [
    "konan_sdk/__init__.py:__version__",
    "pyproject.toml:version"
]
version_toml = [
    "pyproject.toml:tool.poetry.version"
]
major_on_zero = false
branch = "main"
upload_to_PyPI = true
upload_to_release = true
build_command = "pip install poetry && poetry build"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
